--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="btn" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="btn" href="about.html">About</a>
+            <a class="btn" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="btn" href="#login-container">Login</a>
@@ -42,7 +42,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link ">About</a>
+            <a class="btn" href="contact.html">contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn" href="service.html">service</a>
           </li>
         </ul>
 
@@ -115,7 +118,7 @@
 
     <ul>
 
-      <li><a href="#">About</a></li>
+      <li><a href="#">About Us</a></li>
       <li><a href="#">Our Service</a></li>
       <li><a href="#">Our Product</a></li>
       <li><a href="#">Contact Us</a></li>
