--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <div class="col-md-6">
             <h5>Login</h5>
             <form id="login-form">
-              <input type="text" name="username" id="login-username" class="input1" required
+              <input type="text" name="username" id="login-username" class="form-control" required
                 placeholder="Username"><br><br>
-              <input type="password" name="password" id="login-password" class="input1" required placeholder="Password">
+              <input type="password" name="password" id="login-password" class="form-control" required placeholder="Password">
               <br><br>
               <input type="submit" name="submit" value="login" class="btn btn-primary">
               <br>
@@ -97,15 +97,31 @@
           <div class="col-md-6">
             <h5>Register</h5><br>
 
-            <form id="signup-form">
-              <input type="text" name="username" id="username" class="input1" required placeholder="Username"><br><br>
-              <input type="text" name="email" id="email" class="input1" required placeholder="Email"><br><br>
-              <input type="password" name="password" id="password" class="input1" required placeholder="Password">
-              <br><br>
-              <input type="submit" name="submit" value="register" class="btn btn-primary">
-              <br><br>
-              <p onclick="redirectToLogin()">Already have an account? Login</p>
-            </form>
+            <form id="form" class="form">
+              <div class="form-control">
+                  <label for="username">username</label>
+                  <input type=""name=""id="username"placeholder="Enter your username">
+                  <small>eror message</small>
+              </div>
+               <div class="form-control ">
+                  <label for="Email">Email</label>
+                  <input type=""name=""id="email"placeholder="Enter your Email">
+                  <small>eror message</small>
+              </div>
+               <div class="form-control ">
+                  <label for="password">password</label>
+                  <input type=""name=""id="password"placeholder="Enter your password">
+                  <small>eror message</small>
+              </div>
+               <div class="form-control ">
+                  <label for="confirm password">confirm password</label>
+                  <input type=""name=""id="re-password"placeholder="confirm password">
+                  <small>eror message</small>
+                  
+              </div>
+              <button type="submit">ลงทเบียน</button>
+  
+          </form>
 
           </div>
         </div>
